# AudiPy

./: .audible_auth_cache  .env  .gitignore  Frontend_Testing_Phases.md  GETTING_STARTED_CLI.md  README.md  TESTING.md  audible_api_structure.md  audipy-api.service  audipy_with_token_caching.py  check_current_state.sh  crypto_utils_simple.py  debug_auth_data.py  dump_api_data.py  phase1_authenticate.py  phase2_user_profile.py  phase3_fetch_library.py  phase4_generate_recommendations.py  pyproject.toml  requirements.txt  secure_auth_guide.md  secure_authentication_options.md  setup_database.py  setup_database.sql  test_stored_tokens.py  view_recommendations.py
api/: main.py
api_samples/: author_books.json  catalog_books.json  categories.json  narrator_books.json  user_library_books.json
audipy/: audible_client.py  cli.py  config.py  db.py  normalize.py  recommend.py  render.py  sync.py
backend/: .coverage  .env  .env.example  API_TESTING_PLAN_RESULTS.md  ENHANCED_TEST_SUITE_SUMMARY.md  TESTING_STRATEGY.md  TEST_RESULTS.md  generate_encryption_key.py  phase1_authenticate.py  phase2_user_profile.py  phase3_fetch_library.py  phase4_generate_recommendations.py  pytest.ini  requirements.txt  requirements_web.txt  run_tests.py
docs/: DEVELOPMENT_PHASES.md  FASTAPI_SETUP.md  PHASE_SCRIPTS_README.md  README_SCRIPTS.md  SETUP_COMPLETE.md  WEB_ARCHITECTURE.md  auth_strategy.md  auth_strategy_updated.md  database_schema.md  recommendation_processing_plan.md  web_interface_brainstorm.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+44 files in other folders)
