[project]
name = "audipy"
version = "0.1.0"
description = "Analyze your Audible library and find your next great read — series gaps, more by your authors, and discovery through your narrators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audible==0.10.0",
    "rich==15.0.0",
    "typer==0.26.8",
]

[project.scripts]
audipy = "audipy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audipy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]
